vanila/kuber/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: consumer
  labels:
    app: consumer

spec:
  replicas: 3

  selector:
    matchLabels:
      app: consumer

  template:
    metadata:
      labels:
        app: consumer

    spec:
      containers:
        - name: consumer
          image: devops2-worker:latest
          imagePullPolicy: Never
