vanila/kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: api.local
      http:
        paths:
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
